aggiunti commenti parte backend